# JustdoSTM32

./: .gitignore  README.md
LED_Blink/: CMakeLists.txt  CMakePresets.json
LED_Blink/cmake/: arm-none-eabi-gcc.cmake
LED_Blink/scripts/: build.py  flash_stflash.sh
LED_Blink/src/app/: CMakeLists.txt  main.c
LED_Blink/src/bsp/: CMakeLists.txt
LED_Blink/src/cmsis/: CMakeLists.txt
LED_Blink/src/common/: CMakeLists.txt  syscalls.c
LED_Blink/src/driver/: CMakeLists.txt  stm32f10x_conf.h.in
LED_Blink/src/startup/: STM32F103C8Tx_FLASH.ld
LED_Water_Light/: CMakeLists.txt  CMakePresets.json
LED_Water_Light/cmake/: arm-none-eabi-gcc.cmake
LED_Water_Light/src/app/: main.c
LED_Water_Light/src/common/: CMakeLists.txt
Project_Template/: CMakeLists.txt  CMakePresets.json
Project_Template/cmake/: arm-none-eabi-gcc.cmake
Project_Template/output/stm32-debug/: ThroughBeam_Counting.bin.sha256  ThroughBeam_Counting.elf.sha256  ThroughBeam_Counting.hex.sha256  ThroughBeam_Counting.map  build_info.txt
Project_Template/scripts/: flash_cubeprog.py
Project_Template/src/app/: CMakeLists.txt  main.c
Project_Template/src/bsp/: CMakeLists.txt
Project_Template/src/cmsis/: CMakeLists.txt
Project_Template/src/common/: CMakeLists.txt
